[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpgmaker-tileset-composer"
version = "0.1.0"
description = "Visual tileset composer for RPG Maker MZ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
tileset-composer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
qt_api = "pyside6"
python_classes = ["Test*"]
python_functions = ["test_*"]
